--- a/BITMD15/app/src/main/res/layout/activity_main.xml
+++ b/BITMD15/app/src/main/res/layout/activity_main.xml
@@ -8,30 +8,29 @@
     tools:context=".MainActivity">
 
     <EditText
-    android:layout_margin="10dp"
-    android:padding="10dp"
-    android:id="@+id/nameETID"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:hint="Name"/>
+        android:id="@+id/nameETID"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:hint="Name"
+        android:padding="10dp" />
 
     <EditText
-        android:layout_margin="10dp"
-        android:padding="10dp"
         android:id="@+id/ageETID"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Age"/>
+        android:layout_margin="10dp"
+        android:hint="Age"
+        android:padding="10dp" />
 
     <Button
-        android:layout_marginTop="5dp"
         android:id="@+id/insertBTNID"
         android:layout_width="match_parent"
         android:layout_height="40dp"
+        android:layout_marginTop="5dp"
         android:background="@color/colorAccent"
-        android:textColor="@android:color/white"
-        android:text="insert"/>
-
+        android:text="insert"
+        android:textColor="@android:color/white" />
 
 
 </LinearLayout>
