After show and delete method complete

--- a/BITMD15/app/src/main/res/layout/activity_main.xml
+++ b/BITMD15/app/src/main/res/layout/activity_main.xml
@@ -32,5 +32,14 @@
         android:text="insert"
         android:textColor="@android:color/white" />
 
+    <Button
+        android:id="@+id/showBTNID"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="5dp"
+        android:background="@color/colorPrimaryDark"
+        android:text="show details"
+        android:textColor="@android:color/white" />
+
 
 </LinearLayout>
