--- a/DailyExpenses/app/src/main/res/layout/activity_main.xml
+++ b/DailyExpenses/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,6 @@
 
 
 
-
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -27,6 +26,13 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerviewID"
         android:layout_width="match_parent"
@@ -36,14 +42,17 @@
 
 
 
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_marginTop="@dimen/fab_margin"
+            android:layout_marginBottom="@dimen/fab_margin"
+            app:srcCompat="@drawable/ic_add_black_24dp" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center|right"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@drawable/ic_add_black_24dp" />
+
+
 
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -56,7 +65,6 @@
     </com.google.android.material.bottomnavigation.BottomNavigationView>
 
 
-
-
-
+    </LinearLayout>
+    
 </LinearLayout>
