--- a/DailyExpenses/app/src/main/res/layout/activity_add_expense.xml
+++ b/DailyExpenses/app/src/main/res/layout/activity_add_expense.xml
@@ -19,6 +19,8 @@
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
+       android:entries="@array/expenses"
+       android:prompt="@string/expense_type"
        >
 
    </Spinner>
