--- a/DailyExpense/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/DailyExpense/app/src/main/res/menu/bottom_nav_menu.xml
@@ -9,6 +9,6 @@
     <item
         android:id="@+id/navigation_expense"
         android:icon="@drawable/ic_monetization_on_black_24dp"
-        android:title="@string/title_Expense" />
+        android:title="@string/title_expenses" />
 
 </menu>
