--- a/DailyExpense/app/src/main/res/layout/recyclerview_user_expense_list.xml
+++ b/DailyExpense/app/src/main/res/layout/recyclerview_user_expense_list.xml
@@ -66,12 +66,13 @@
                     android:textColor="#000000"
                     android:layout_gravity="center_vertical"/>
 
-                <ImageView
-                    android:layout_width="20dp"
+                <TextView
+                    android:id="@+id/textViewOption"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-
-                    android:src="@drawable/ic_menu_24dp"
-                    android:layout_gravity="center_vertical"/>
+                    android:paddingLeft="@dimen/activity_horizontal_margin"
+                    android:text="&#8942;"
+                    android:textAppearance="?android:textAppearanceLarge"/>
 
             </LinearLayout>
 
