--- a/DailyExpense/app/src/main/res/layout/fragment_dashboard.xml
+++ b/DailyExpense/app/src/main/res/layout/fragment_dashboard.xml
@@ -1,21 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".DashboardFragment">
 
-<androidx.appcompat.widget.Toolbar
-    android:layout_width="match_parent"
-    android:layout_height="?attr/actionBarSize"
-    android:background="@color/colorPrimaryDark"
-    app:title="Dashboard"
-    app:titleTextColor="#FFFFFF">
+    <androidx.appcompat.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimaryDark"
+        app:title="Total Expense"
+        app:titleTextColor="#FFFFFF">
 
-</androidx.appcompat.widget.Toolbar>
+    </androidx.appcompat.widget.Toolbar>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:gravity="center">
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:background="@android:color/white"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:textColorHighlight="@color/colorAccent"
+            android:text="Total Expense : $ 800 "/>
+
+
+
+
+    </LinearLayout>
 
 
 </LinearLayout>
