--- a/DailyExpense/app/src/main/res/layout/recyclerview_user_expense_list.xml
+++ b/DailyExpense/app/src/main/res/layout/recyclerview_user_expense_list.xml
@@ -2,18 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardViewID"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="2dp">
+        android:layout_marginBottom="2dp"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_margin="5dp">
+            >
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -39,7 +41,7 @@
                     android:text="Date of Expense"
                     android:textColor="#000000"
                     android:textSize="14sp"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="2dp"
                     android:layout_marginLeft="5dp"/>
 
             </LinearLayout>
