--- a/DailyExpenseNote/app/src/main/res/values/colors.xml
+++ b/DailyExpenseNote/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimaryDark">#3F51B5</color>
+    <color name="colorAccent">#E91E63</color>
+    <color name="black">#000000</color>
+    <color name="gray">#615F5F</color>
 </resources>
