--- a/BITMD22-Firebase-Authentication(OTP)/app/src/main/res/layout/activity_verify.xml
+++ b/BITMD22-Firebase-Authentication(OTP)/app/src/main/res/layout/activity_verify.xml
@@ -8,7 +8,7 @@
     tools:context=".VerifyActivity">
 
     <EditText
-        android:id="@+id/codeET"
+        android:id="@+id/codeETID"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Enter varification code"
