--- a/Day23FirebaseAuthEmailPassword/app/src/main/res/layout/activity_main.xml
+++ b/Day23FirebaseAuthEmailPassword/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
 
+    <TextView
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_marginTop="130dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Welcome"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:layout_gravity="center"/>
+
+    <LinearLayout
+        android:layout_marginTop="300dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center">
+
+        <Button
+            android:layout_gravity="center"
+            android:id="@+id/signOutBTNID"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:text="sign out"
+            android:textColor="@android:color/white"
+            android:background="@color/colorAccent"/>
+
+    </LinearLayout>
+
+
+
+
+
+</LinearLayout>
